WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234856
WPT test css/css-transitions/parsing/transition-shorthand.html has failures
https://bugs.webkit.org/show_bug.cgi?id=234856
Summary
WPT test css/css-transitions/parsing/transition-shorthand.html has failures
Antoine Quint
Reported
2022-01-04 12:21:07 PST
WPT test css/css-transitions/parsing/transition-shorthand.html has failures
Attachments
Patch
(72.14 KB, patch)
2022-01-04 12:23 PST
,
Antoine Quint
dino
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(75.75 KB, patch)
2022-01-04 13:14 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-01-04 12:23:34 PST
Created
attachment 448320
[details]
Patch
Antoine Quint
Comment 2
2022-01-04 13:14:17 PST
Created
attachment 448328
[details]
Patch for landing
EWS
Comment 3
2022-01-04 23:04:23 PST
Committed
r287602
(
245729@main
): <
https://commits.webkit.org/245729@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448328
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-01-04 23:05:20 PST
<
rdar://problem/87132001
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug