WPT test css/css-transitions/parsing/transition-shorthand.html has failures https://bugs.webkit.org/show_bug.cgi?id=234856

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark WPT progressions, all tests in css/css-transitions/parsing/transition-shorthand.html now pass.

* web-platform-tests/css/css-transitions/parsing/transition-shorthand-expected.txt:

Source/WebCore:

Parse the "transition" shorthand the same way we parse the "animation" shorthand
and teach ComputedStyleExtractor::addValueForAnimationPropertyToList() about
"transition-property" so that it correctly returns a CSSValue for it.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::addValueForAnimationPropertyToList):
* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::consumeAnimationShorthand):

LayoutTests:

This historical test transitions/transitions-parsing.html is wrong and WPT has exhaustive
coverage for parsing of transition properties, so let's remove it.

Rebaselining some other tests.

* fast/css/shorthand-mismatched-list-crash-expected.txt:
* fast/css/shorthand-mismatched-list-crash.html:
* fast/css/transform-inline-style-expected.txt:
* fast/css/transform-inline-style-remove-expected.txt:
* transitions/transitions-parsing-expected.txt: Removed.
* transitions/transitions-parsing.html: Removed.



Canonical link: https://commits.webkit.org/245729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287602 268f45cc-cd09-0410-ab3c-d52691b4dbfc